import "goby/protobuf/dccl_option_extensions.proto";
import "goby/protobuf/queue_option_extensions.proto";
import "goby/protobuf/header.proto";

message GobyMessage1
{
  option (dccl.id) = 4;
  option (dccl.max_bytes) = 32;

  optional int32 int32_val = 1 [(dccl.min)=0, (dccl.max)=20];
}

message GobyMessage2
{
  option (dccl.id) = 5;
  option (dccl.max_bytes) = 32;

  optional bool bool_val = 1;
}

message GobyMessage3
{
  option (dccl.id) = 6;
  option (dccl.max_bytes) = 32;

  optional string string_val = 1 [(dccl.max_length)=10];
}
